增加设备报修超时报表

--- a/EmpInfo/Views/Apply/BeginApplyAL.cshtml
+++ b/EmpInfo/Views/Apply/BeginApplyAL.cshtml
@@ -297,6 +297,7 @@
                 formData: { sysNum: '@ba.sysNum' },
                 fileNumLimit: maxNum,
                 fileSingleSizeLimit: maxSingleSize,
+                duplicate:true,
                 accept: {
                     title: 'Images',
                     extensions: 'gif,jpg,jpeg,bmp,png',
