--- a/EmpInfo/Views/Apply/GetMyAuditingList.cshtml
+++ b/EmpInfo/Views/Apply/GetMyAuditingList.cshtml
@@ -88,7 +88,7 @@
                         <td>@i.step</td>
                         <td>@i.applier</td>
                         <td>@(((DateTime)i.applyTime).ToString("yyyy-MM-dd HH:mm:ss"))</td>
-                        <td>@i.subTitle</td>
+                        <td>@i.subTitle
                         <td>@i.stepName</td>
                     </tr>
                 }
