--- a/EmpInfo/Views/EP/EqDepDetail.cshtml
+++ b/EmpInfo/Views/EP/EqDepDetail.cshtml
@@ -72,7 +72,7 @@
         });
 
         //选择人员
-        $("#eqDepCharger,#eqDepMinister,#prDepCharger,#prDepChief,#prDepMinister").on("focus", function () {
+        $(".user-select").on("focus", function () {
             var self = this;
             openSelectUserDialog($(self).val(), 1, function (result) {
                 $(self).val(result);
@@ -174,7 +174,7 @@
             });
         });
 
-        //添加权限到组
+        //添加生产部门
         $("#addAutBt").click(function () {
             $("#prDepForm")[0].reset();
             $("#prId").val("0");
@@ -195,6 +195,7 @@
                     $("#prDepName").val(d.dep_name);
                     $("#busDepName").val(d.bus_dep_name);
                     $("#prDepCharger").val(d.charger_name+"("+d.charger_num+")");
+                    $("#prPlanManagerName").val(d.plan_manager_name==null?"":(d.plan_manager_name+"("+d.plan_manager_number+")"));
                     $("#prDepChief").val(d.chief_name==null?"":(d.chief_name+"("+d.chief_num+")"));
                     $("#prDepMinister").val(d.minister_name==null?"":(d.minister_name+"("+d.minister_num+")"));
                     $("#groupAutModal").modal("show");
@@ -209,6 +210,7 @@
             var prDepName=$("#prDepName").val();
             var busDepName=$("#busDepName").val();
             var prDepCharger=$("#prDepCharger").val();
+            var prPlanManager=$("#prPlanManagerName").val();
             var prDepChief=$("#prDepChief").val();
             var prDepMinister=$("#prDepMinister").val();
             $.post("@Url.Content("~/EP/SavePrDeps")", {
@@ -218,13 +220,14 @@
                 prDepName:prDepName,
                 busDepName:busDepName,
                 prDepCharger:prDepCharger,
+                prPlanManager:prPlanManager,
                 prDepChief:prDepChief,
                 prDepMinister:prDepMinister
             }, function (data) {
                 if (data.suc) {
                     toastr.success(data.msg);
                     $("#groupAutModal").modal("hide");
-                    setTimeout(function(){window.location.reload(true);},1000);
+                    setTimeout(function(){window.location.reload(true);},800);
                 } else {
                     toastr.error(data.msg);
                 }
@@ -490,6 +493,7 @@
                                         <div>
                                             <div>@a.bus_dep_name</div>
                                             <div>部门主管：@a.charger_name</div>
+                                            <div>计划经理：@a.plan_manager_name</div>
                                             <div>部门直接上级：@a.chief_name</div>
                                             <div>事业部长：@a.minister_name</div>
                                             <input type="hidden" class="a_id" value="@a.id" />
@@ -521,9 +525,10 @@
                         @*<input type="text" class="form-control" id="prDepNo" placeholder="请输入生产部门编码" />*@
                         <input type="text" class="form-control" id="prDepName" placeholder="请输入生产部门名称" style="margin-top:4px;"/>
                         <input type="text" class="form-control" id="busDepName" placeholder="请输入所属事业部名称" style="margin-top:4px;"/>
-                        <input type="text" class="form-control" id="prDepCharger" placeholder="请输入生产部门主管" style="margin-top:4px;"/>
-                        <input type="text" class="form-control" id="prDepChief" placeholder="请输入部门直接上级" style="margin-top:4px;"/>
-                        <input type="text" class="form-control" id="prDepMinister" placeholder="请输入事业部长" style="margin-top:4px;"/>
+                        <input type="text" class="form-control user-select" id="prDepCharger" placeholder="请输入生产部门主管" style="margin-top:4px;"/>
+                        <input type="text" class="form-control user-select" id="prPlanManagerName" placeholder="请输入计划经理" style="margin-top:4px;"/>
+                        <input type="text" class="form-control user-select" id="prDepChief" placeholder="请输入部门直接上级" style="margin-top:4px;"/>
+                        <input type="text" class="form-control user-select" id="prDepMinister" placeholder="请输入事业部长" style="margin-top:4px;"/>
                     </form>
                 </div>
                 <div class="modal-footer">
