--- a/EmpInfo/Views/Report/ExportAuditTimeExceedExcel.cshtml
+++ b/EmpInfo/Views/Report/ExportAuditTimeExceedExcel.cshtml
@@ -35,7 +35,8 @@
                 autoclose: true,
                 todayBtn: true,
                 startView: 2,
-                minView: 2
+                minView: 2,
+                startDate:'2019-05-06'
             });
             //设置日期联动，结束日期不能大于起始日期
             $("#fromDatePicker1").on("changeDate", function (e) {
@@ -47,7 +48,7 @@
 
             $("#ucReportBt").on("click", function () {
                 toastr.info("数据正在导出，请稍等...");
-                window.location.href = "@Url.Content("~/Report/BeginExportETReport?")"
+                window.location.href = "@Url.Content("~/Report/BeginExportAuditTimeExceedExcel?")"
                 + "fromDate=" + $("#fromDate").val()
                 + "&toDate=" + $("#toDate").val();
                 ;
@@ -65,8 +66,8 @@
             <li><span class="glyphicon glyphicon-hand-right"></span></li>
             <li><a href="@Url.Content("~/Home/Index")">主页</a></li>
             <li><a href="@Url.Content("~/Home/WorkGroupIndex")">智慧办公集合</a></li>
-            <li><a href="@Url.Content("~/Apply/ApplyIndex?billType=ET")">紧急出货运输申请</a></li>
-            <li class="active">查询报表</li>
+            <li><a href="@Url.Content("~/Apply/ApplyIndex?billType=EP")">设备故障报修单</a></li>
+            <li class="active">处理超时报表</li>
         </ol>
     </div>
     <div class="panel-body">
@@ -74,13 +75,13 @@
             <div class="col-xs-12 col-sm-6 col-md-4">
                 <div class="input-group date form_date" style="margin:6px 0;" id="fromDatePicker1">
                     <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
-                    <input class="form-control" type="text" id="fromDate" name="fromDate" placeholder="请输入起始日期" readonly />
+                    <input class="form-control" type="text" id="fromDate" name="fromDate" placeholder="请输入起始日期" readonly value="@DateTime.Now.ToString("yyyy-MM-01")" />
                 </div>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4">
                 <div class="input-group date form_date" style="margin:6px 0;" id="toDatePicker1">
                     <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
-                    <input class="form-control" type="text" id="toDate" name="toDate" placeholder="请输入结束日期" readonly />
+                    <input class="form-control" type="text" id="toDate" name="toDate" placeholder="请输入结束日期" readonly value="@DateTime.Now.ToString("yyyy-MM-dd")" />
                 </div>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-4">
