新增辅料申购流程

--- a/EmpInfo/Views/Apply/BeginApplySV.cshtml
+++ b/EmpInfo/Views/Apply/BeginApplySV.cshtml
@@ -218,6 +218,7 @@
                             </div>
                             <input type="hidden" id="eDepNum" name="dep_no" value="@m.depNum" />
                             <input type="hidden" id="eDepId" name="dep_id" value="@m.depId" />
+                            <div style="margin-top:6px;"><input type="checkbox" name="is_direct_charge" value="true" /> 董事/总经理办公室直管</div>
                         </div>
                     </div>
                     <div class="b-div" style="vertical-align:middle;">
