--- a/EmpInfo/Views/Apply/BeginAuditEPApply.cshtml
+++ b/EmpInfo/Views/Apply/BeginAuditEPApply.cshtml
@@ -337,7 +337,7 @@
                     <input type="hidden" name="sysNo" value="@bam.sysNum" />
                     <input type="hidden" name="step" value="@bam.step" />
                     <input type="hidden" name="stepName" value="@bam.stepName" />
-                    <div class="text-right">
+                    <div>
                         <a href="#dScoreForm" class="btn btn-danger" id="managerRejectBtn"><i class="fa fa-remove"></i> 拒接</a>
                     </div>
                     <div class="b-div">
