--- a/EmpInfo/Views/Apply/CheckEPApply.cshtml
+++ b/EmpInfo/Views/Apply/CheckEPApply.cshtml
@@ -252,7 +252,7 @@
                         }
                     </table>
                     }
-                    @if (ep.grade_time != null) {
+                    @if (ep.difficulty_score != null) {
                         <h4 style="border-bottom:1px solid #337ab7;font-style:italic" class="text-primary">维修难度评分</h4>
                         <table style="width:100%;border-collapse:separate; border-spacing:8px;" class="contentTb">
                             <tr>
