--- a/EmpInfo/Views/Shared/_InputDialog.cshtml
+++ b/EmpInfo/Views/Shared/_InputDialog.cshtml
@@ -28,7 +28,8 @@
         $("#it_text_title").html(title ? title : "信息输入");
         $("#it_text_cancel").html(cancelText ? cancelText : "取消");
         $("#it_text_confirm").html(confirmText ? confirmText : "确定");
-        
+
+        $("#it_input_content").val("");
         $("#inputModal").modal("show");
         $("#input_tip").html(inputTip);
         itcb = callback;
