--- a/EmpInfo/Views/Shared/_SelectDep.cshtml
+++ b/EmpInfo/Views/Shared/_SelectDep.cshtml
@@ -13,6 +13,8 @@
             sdurl = "@Url.Content("~/Item/GetDepartmentTreeForSel")";
         } else if (typ == 1) {
             sdurl = "@Url.Content("~/Item/GetAdminDepartmentTreeForSel")";
+        } else if (typ == 2) {
+            sdurl = "@Url.Content("~/Item/GetHRDepartmentTree")";
         }
 
         sdcb = callback;
