--- a/EmpInfo/Views/Shared/_Layout.cshtml
+++ b/EmpInfo/Views/Shared/_Layout.cshtml
@@ -30,6 +30,7 @@
     <script src="@Url.Content("~/Scripts/toastr.min.js")"></script>
     <script src="@Url.Content("~/Scripts/icheck.js")"></script>
     <script src="@Url.Content("~/Scripts/placeholders.js")"></script>
+    <script src="@(Url.Content("~/Scripts/myJs.js?v=")+new Random().Next())"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
